Реализовано удаление топика

--- a/First_Forum/First_Forum.csproj
+++ b/First_Forum/First_Forum.csproj
@@ -252,6 +252,8 @@
     <Content Include="Views\Home\DeleteForum.cshtml" />
     <Content Include="Views\Forum\Index.cshtml" />
     <Content Include="Views\Forum\Create.cshtml" />
+    <Content Include="Views\Forum\Delete.cshtml" />
+    <Content Include="Views\Forum\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
